--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,16 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title> Luxe-Lane </title>
-    <!-- <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script> -->
+    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
         <!-- script added for push notification -->
-    <!-- <script>
+    <script>
       window.OneSignalDeferred = window.OneSignalDeferred || [];
       OneSignalDeferred.push(function(OneSignal) {
         OneSignal.init({
           appId: "9dc5e8a7-170c-4a0d-865b-bfcef5f2b630",
         });
       });
-    </script> -->
+    </script>
         <!-- script added for push notification -->
   </head>
   <body>
