--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,28 @@
       });
     </script>
         <!-- script added for push notification -->
+
+        <!-- Google Translate API Script -->
+    <script type='text/javascript' src='//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit'></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
- 
+
+      <!-- Google Language Translator API -->
+      <script>
+        function googleTranslateElementInit(){
+          var config = {
+            pageLanguage: 'en',
+            includedLanguages: 'en,fr,',
+            layout:google.translate.TranslateElement.InlineLayout.SIMPLE
+          };
+          var langOptionsID = 'google_translate_element';
+          new google.translate.TranslateElement(config, langOptionsID)
+        }
+      </script>
+
+
   </body>
 </html>
